--- a/problem-b/css/style.css
+++ b/problem-b/css/style.css
@@ -2,30 +2,40 @@ circle[cy="130"][r="100"] {
   fill: #5f5f5f;
 }
 
-path[d="M150,140 A 90,90 0 0,0 150,330 z"],
-path[d="M450,140 A 90,90 0 1,1 450,330 z"] {
+path {
   stroke: #5f5f5f;
   stroke-width: 8px;
-}
-circle.class {
-  color: white;
-}
-g circle.class {
-  color: #573d29;
-}
-
-g circle[cx="300"],
-g rect#rect {
-  color: #c0c0c0;
-  stroke: none;
-}
-
-path#interactive {
-  color: #c0c0c0;
-  stroke: #bd250d;
-  stroke-width: 4px;
 }
 
 rect {
   opacity: 0;
+}
+
+circle.small {
+  fill: white;
+}
+
+g circle.small {
+  fill: #573d29;
+}
+
+circle[r="100"],
+rect#rect {
+  fill: #c0c0c0;
+  stroke-width: 0px;
+  opacity: 1;
+}
+
+path#interactive {
+  fill: #c0c0c0;
+  stroke: #bd250d;
+  stroke-width: 4px;
+}
+
+path#interactive:hover {
+  fill: #bd250d;
+}
+
+path[d="M250,210 a 50,50 0 1,0 100,0 a 50,50 0 1,0 -100,0"] {
+  stroke-width: 0px;
 }
