--- a/problem-d/css/style.css
+++ b/problem-d/css/style.css
@@ -20,13 +20,22 @@ h1 {
   margin-top: 3em;
 }
 
+.logo {
+  background-image: url("../img/ischool-symbol-white.png");
+  padding-right: 1em;
+  padding-left: 1em;
+  position: left;
+  size: contain;
+  background-repeat: no-repeat;
+}
+
 nav {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   background-color: #4b2e83;
-  padding: 0.75rem;
+  padding: .75rem;
 }
 
 nav a {
@@ -40,9 +49,9 @@ nav li {
 }
 
 nav ul {
-  padding: 0px;
-  margin: 0px;
-  padding-top: 0.5rem;
+  padding: 0;
+  margin: 0;
+  padding-top: .5rem;
   display: inline-block;
 }
 
@@ -50,27 +59,20 @@ nav ul {
   float: right;
 }
 
-.searchbox input {
+input {
   height: 2.5rem;
   font-size: 1rem;
-  padding: 0, 5rem;
+  padding: .5rem;
   vertical-align: bottom;
 }
 
 .searchBox button {
   height: 2.5rem;
   font-size: 1.5rem;
-  padding: 0.3rem;
+  padding: .3rem;
 }
 
 nav a:hover {
   color: #b7a57a;
   border-bottom: 0.6rem solid #b7a57a;
-}
-
-.logo {
-  padding-right: 1em;
-  position: left;
-  size: contain;
-  background-repeat: no-repeat;
 }
